<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".DefinitionBuilder"
    android:background="@color/black">

    <TextView
        android:id="@+id/headingDB"
        android:layout_width="344dp"
        android:layout_height="40dp"
        android:text="@string/headingDB"
        android:textAlignment="center"
        android:textColor="@color/orangeHeading"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/descriptionDB"
        android:layout_width="363dp"
        android:layout_height="69dp"
        android:text="@string/descriptionDB"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:contentDescription="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/cancel_button" />

    <View
        android:id="@+id/dividerTop"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionDB"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/termToDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Term to Define"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/wordDropZone"
        android:layout_width="396dp"
        android:layout_height="145dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/db_drop_zone_background"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:alignContent="flex_start"
        app:flexWrap="wrap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerTop">
        <!-- Word TextViews will be added here programmatically -->
    </com.google.android.flexbox.FlexboxLayout>

    <View
        android:id="@+id/dividerBottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/wordDropZone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayoutWordChoices"
        android:layout_width="396dp"
        android:layout_height="143dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/db_word_zone_background"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:alignContent="flex_start"
        app:flexWrap="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerBottom"
        app:layout_constraintVertical_bias="0.0">

        <!-- Individual words will be added here programmatically -->

    </com.google.android.flexbox.FlexboxLayout>

    <Button
        android:id="@+id/checkButton"
        android:layout_width="158dp"
        android:layout_height="80dp"
        android:text="@string/db_check_button"
        android:background="@drawable/db_check_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

</androidx.constraintlayout.widget.ConstraintLayout>