<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MatchingGame"
    android:background="@color/black">

    <TextView
        android:id="@+id/headingMG"
        android:layout_width="344dp"
        android:layout_height="40dp"
        android:text="@string/headingMatching"
        android:textAlignment="center"
        android:textColor="@color/orangeHeading"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/descriptionMG"
        android:layout_width="363dp"
        android:layout_height="69dp"
        android:text="@string/descriptionMatching"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="41dp"
        android:text="@string/MG_definition"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="176dp"
        android:layout_height="41dp"
        android:text="@string/MG_term"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Def1"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Definition"
        android:background="@drawable/mg_definition_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Def2"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Definition"
        android:background="@drawable/mg_definition_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Def3"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Definition"
        android:background="@drawable/mg_definition_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Def4"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Definition"
        android:background="@drawable/mg_definition_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Def5"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Definition"
        android:background="@drawable/mg_definition_button_format"        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Term1"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Term"
        android:background="@drawable/mg_term_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Term2"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Term"
        android:background="@drawable/mg_term_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Term3"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Term"
        android:background="@drawable/mg_term_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Term4"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Term"
        android:background="@drawable/mg_term_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Term5"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:text="Term"
        android:background="@drawable/mg_term_button_format"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:contentDescription="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@drawable/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>